--- a/index.html
+++ b/index.html
@@ -5,60 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corebiz</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<!-- Bootstrap icons-->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-
+    <link rel="stylesheet" href="css/custom.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
 </head>
 <body>
 <header class="header">
     <div class="container">
         <div class="row">
-            <!-- <div class="four columns"> -->
-                <img src="img\site-logo-corebiz-preto-cinza.svg" id="logo-corebiz">
+            <div class="col">
+                <img src="assets\corebiz-logo.png" class="img-fluid" id="logo-corebiz">  
             </div>
-            <div>
+            <div class="col">
                 <form action="#" id="busqueda" method="post" class="formulario">
                     <input class="u-full-width" type="text" placeholder="¿Que estás buscando?" id="buscador">
-                    <input type="submit" id="submit-buscador" class="submit-buscador">
+                    <i class="bi-search"></i>
                 </form>
             </div>
+            <div class="col">
             <div class="two columns u-pull-right">
                 <ul>
                     <li class="submenu">
-                        <i class="bi-cart-fill me-1"></i>
+                        <i class="bi-cart-fill"></i>
                         <div id= "cart">
                             <table id="list-cart" class="u-full-width">
-                                <thead>
-                                    <tr>
-                                        <!-- <th>Imagen</th>
-                                        <th>Nombre</th>
-                                        <th>Precio</th>
-                                        <th>Cantidad</th> -->
-                                    </tr>
-                                </thead>
-                                <tbody></tbody>
                             </table>
                             <a href="#" id="delete-cart" class="button u-full-width">Vaciar Carro</a>
                         </div>
-
                     </li>
                 </ul>
             </div>
+        </div>
         </div>
     </div>
 </header>
 <div class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
-            <h1 class="lead fw-normal text-white-50 mb-0">!Hola!¿Qué es lo que buscas?</h1>
-            <p class="display-6 fw-bolder">Crear o migrar tu comercio electrónico?</p>
+            <h1 class="lead fw-normal text-white-60 mb-0">!Hola!¿Qué es lo que buscas?</h1>
+            <p class="display-5 fw-bolder">Crear o migrar tu comercio electrónico?</p>
         </div>
     </div>
+</div>
+<div>
+    <p class="display-6 fw-bolder">Más vendidos</p>
 </div>
 <div id= "list-products" class="container product-list">
     <div class="row products"></div>
   </div>
+  <footer class="py-5 bg-dark">
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Corebiz</p></div>
+</footer>
 <script src="js\app.js"></script>
 </body>
 </html>
